syntax = "proto3";

package workshop;
option go_package="./pb";

message Empty {}

service workshop {
    rpc Insert (WorkshopInfo) returns (Empty);
    rpc Delete (DeleteReq) returns (Empty);
    rpc Update (WorkshopInfo) returns (Empty);
    rpc PartialUpdate (WorkshopInfo) returns (Empty);
    rpc FindListByEnterprise (FindListByEnterpriseReq) returns (WorkshopList);
}

message WorkshopInfo {
    int64  Id           = 1;
    int64  EnterpriseId = 2;
    int64  ManagerId    = 3;
    string Name         = 4;
    string Address      = 5;
    string PhoneNumber  = 6;
    string Remark       = 7;
    int64  Version      = 8;
}

message DeleteReq {
    int64 id = 1;
}

message FindListByEnterpriseReq {
    int64 EnterpriseId = 1;
    int32 PageSize     = 2;
    int32 PageNumber   = 3;
}

message WorkshopList {
    repeated WorkshopInfo List = 1;
}